refactor: cert
